# doneit

./: Cargo.toml  README.md  docs.md
src/: app.rs  colors.rs  config.rs  main.rs  store.rs
themes/: catpuccin.yaml  everforest.yaml  nord.yaml
